--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -38,7 +38,25 @@
 <section id="posts" class="my-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-9">
+
+      <div class="col-md-2">
+        <div class="card text-center bg-primary text-white p-3 mb-3">
+          <div class="card-block">
+            <h3>Books</h3>
+            <h1 class="display-9"><i class="fa fa-pencil"></i> <%=books_count%></h1>
+            <a href="/admin/bookInventory/all/all/1" class="btn btn-outline-light">View</a>
+          </div>
+        </div> 
+        <div class="card text-center bg-success text-white p-3 mb-3">
+          <div class="card-block">
+            <h3>Authors</h3>
+            <h1 class="display-9"><i class="fa fa-pencil"></i> <%=authors_count%></h1>
+            <a href="/admin/authorInventory/all/all/1" class="btn btn-outline-light">View</a>
+          </div>
+        </div> 
+
+      </div>
+      <div class="col-md-7">
         <div class="card">
           <div class="card-header text-center">
             <h4>Recent User Activities</h4>
@@ -167,19 +185,19 @@
         </div>
       </div>
       
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="card text-center bg-primary text-white p-3 mb-3">
           <div class="card-block">
-            <h3>Books</h3>
-            <h1 class="display-4"><i class="fa fa-pencil"></i> <%=books_count%></h1>
-            <a href="/admin/bookInventory/all/all/1" class="btn btn-outline-light">View</a>
+            <h3>Genres</h3>
+            <h1 class="display-9"><i class="fa fa-pencil"></i> <%=genres_count%></h1>
+            <a href="/admin/genreInventory/all/all/1" class="btn btn-outline-light">View</a>
           </div>
-        </div>
+        </div> 
 
         <div class="card text-center bg-success text-white p-3 mb-3">
           <div class="card-block">
             <h3>Users</h3>
-            <h1 class="display-4"><i class="fa fa-users"></i> <%=users_count%> </h1>
+            <h1 class="display-9"><i class="fa fa-users"></i> <%=users_count%> </h1>
             <a href="/admin/users/1" class="btn btn-outline-light">Users</a>
           </div>
         </div>
