--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -1,11 +1,77 @@
 
 <%- include('../partials/header') %> 
 <!--NAVIGATION BAR FOR USER-->
-<% if(user.isAdmin) { %>
-    <%- include('../partials/adminNav') %> 
-<% } else{ %>
+
+<% if(!currentUser) { %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0 sticky-top">
+        <div class="container">
+          <% if(!currentUser) { %>
+           <a class="navbar-brand" href="/">Home</a>
+           <% } else if(!currentUser.isAdmin) { %>
+           <a class="navbar-brand" href="/user/1">Home</a>
+           <% } else if(currentUser.isAdmin) { %>
+           <a class="navbar-brand" href="/admin">Home</a>
+           <% } %>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+         
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+             <ul class="navbar-nav">
+               <li class="nav-item active  px-2">
+                 <a class="nav-link" href="/books/all/all/1"> Books</a></a>
+               </li>
+             </ul>
+             <ul class="navbar-nav">
+               <li class="nav-item active  px-2">
+                 <a class="nav-link" href="/authors/all/all/1"> Authors</a></a>
+               </li>
+             </ul>
+             <ul class="navbar-nav">
+               <li class="nav-item active  px-2">
+                 <a class="nav-link" href="/genres/all/all/1"> Genres</a></a>
+               </li>
+             </ul>
+               
+                <% if(currentUser) { %>
+               <ul class="navbar-nav ml-auto">
+     
+                 <li class="nav-item dropdown mr-3">
+                   <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                     <i class="fa fa-user"></i> Welcome <%=user.username%>
+                   </a>
+                   <div class="dropdown-menu">
+                     <%if(!currentUser.isAdmin) { %>
+                       <a href="/user/1/profile" class="dropdown-item">
+                         <i class="fa fa-user-circle"></i> Profile
+                       </a>
+                       <a href="/auth/user-logout" class="dropdown-item">
+                       <i class="fa fa-user-times"></i> Logout
+                     </a>
+                   <% } else { %>
+                        <a href="/admin/profile" class="dropdown-item">
+                         <i class="fa fa-user-circle"></i> Profile
+                       </a>
+                       <a href="/auth/user-logout" class="dropdown-item">
+                         <i class="fa fa-user-times"></i> Logout
+                       </a>
+                   <% } %>
+                   </div>
+                 </li>
+               </ul>
+               <% } else { %>
+                 <a href="/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+                 <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
+               <% } %>
+           </div>
+       </div>
+     </nav>
+<% } else if(!currentUser.isAdmin) { %>
     <%- include('../partials/userNav') %> 
-<% }%>
+<% } else if(currentUser.isAdmin) { %>
+    <%- include('../partials/adminNav') %> 
+<% } %>
+
 <div class="container mt-3">
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -31,11 +97,6 @@
                     </p>
                 </div>
             </div>
-            <% if(user.isAdmin) { %>
-            
-                <a href="/admin/book/delete/<%=book._id%>" class="btn btn-sm btn-danger">Delete</a>
-    
-                <% } %>
 
             <div class="card my-3 bg-light">
                 <% if(currentUser) { %>
