--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -92,6 +92,33 @@
   </div>
 </section>
 
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://i0.wp.com/so-awkward-rose.com/wp-content/uploads/2020/06/so-awkward-rose-10-nha-van-co-suc-anh-huong-lon-nhat-the-gioi.jpg?fit=1200%2C675&ssl=1" alt="First slide" style="  width: 100%;height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://toplist.vn/images/800px/nha-van-vi-dai-nhat-moi-thoi-dai-108493.jpg" alt="Second slide" style="  width: 100%;height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://suckhoedoisong.qltns.mediacdn.vn/Images/duylinh/2020/10/13/images2317680_17d_resize.jpg" alt="Third slide" style="  width: 100%;height: 400px;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 <%- include('./partials/alerts') %> 
 <!--BOOKS-->
 <section id="browse_books" class="mt-5">
