--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -123,7 +123,7 @@
                     <strong><%=comment.author.username%></strong>
                 </a>
                     <span><em> at <%=comment.date.toDateString()%></em></span>
-                    <p><%=comment.text%></p>
+                    <p><%-comment.text%></p>
                     
                      <% if(currentUser && comment.author.id.equals(currentUser._id)) {%>
             
@@ -140,7 +140,7 @@
                     
                     <div class="d-none" id="editCommentBox">
                      <form action="/books/details/<%=book._id%>/<%=comment._id%>" method="POST">
-                        <textarea name="comment[text]" class="form-control"><%=comment.text%></textarea>
+                        <textarea name="comment[text]" class="form-control"><%-comment.text%></textarea>
                         <input type="submit" class="btn btn-outline-success btn-sm m-1 float-right">
                      </form>
                     </div>
@@ -154,7 +154,6 @@
             <h4 class="text-center pb-3">Có thể bạn muốn đọc</h4>
             
             <p class="text-muted">
-                
                 <a href="http://localhost:3000/books/details/6177d3231459523704204873" ><img  src="https://salt.tikicdn.com/cache/w300/media/catalog/product/i/m/img144_10.jpg" class="img-item2" ></a>
                 <img  src="https://isachhay.net/wp-content/uploads/2017/08/sach-hay-moi-lan-vap-nga-la-mot-lan-truong-thanh.jpg" class="img-item2" >
                 <img  src="https://i.doanhnhansaigon.vn/2018/08/25/Mot-lit-nuoc-mat-2277-1535167004.jpg" class="img-item2" >
@@ -173,6 +172,11 @@
     });
 </script>
 
+<script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+  <script>
+    CKEDITOR.replace( 'comment' );
+    CKEDITOR.replace( 'comment[text]' );
+</script>
 
 
 <%- include('../partials/footer') %> 
