--- a/views/admin/author/author_form.ejs
+++ b/views/admin/author/author_form.ejs
@@ -44,6 +44,10 @@
                     <label class="form-control-label">Author describe</label>
                     <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"></textarea>
                   </div>
+                  <div class="form-group">
+                    <label class="form-control-label">Author Summary</label>
+                    <textarea name="summary" cols="30" rows="10" class="form-control"></textarea>
+                  </div>
                   <button type="submit" class="btn btn-primary btn-block">Add Author</button>
                 </form>
               </div>
@@ -56,6 +60,7 @@
 
 <script>
   CKEDITOR.replace( 'describe' );
+  CKEDITOR.replace( 'summary' );
 </script>
 
 
