--- a/views/user/authorDetails.ejs
+++ b/views/user/authorDetails.ejs
@@ -91,6 +91,11 @@
                   Sơ lược qua: <%- author.describe %> 
               </p>
           </div>
+          <div class="card-body">
+            <p class="card-text">
+                Nhận xét: <%- author.summary %> 
+            </p>
+        </div>
         </div>
     </div>
   </div>
