--- a/views/admin/author/author_update.ejs
+++ b/views/admin/author/author_update.ejs
@@ -28,13 +28,13 @@
                   
                   <div class="form-group">
                       <label class="form-control-label" for="date_of_birth">Date of birth:</label>
-                      <input class="form-control" id="date_of_birth"  type="date" name="date_of_birth" value="<%= (undefined===author ? '' :  author.date_of_birth)%>"required="true"> 
+                      <input class="form-control" id="date_of_birth"  type="date" name="date_of_birth" value="<%= (undefined===author ? '' :  author.date_of_birth)%>"> 
                                                                                                       
                   </div>
                   
                   <div class="form-group">
                       <label class="form-control-label" for="date_of_death">date_of_death:</label>
-                      <input class="form-control" id="date_of_death"  type="date" name="date_of_death" value="<%= (undefined===author ? '' :  author.date_of_death)%>"required="true">
+                      <input class="form-control" id="date_of_death"  type="date" name="date_of_death" value="<%= (undefined===author ? '' :  author.date_of_death)%>">
                   </div>
                   <div class="form-group">
                     <label class="form-control-label" for="coverImg">Image Cover</label>
@@ -43,6 +43,10 @@
                   <div class="form-group">
                     <label class="form-control-label">Author describe</label>
                     <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"><%=author.describe%></textarea>
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label">Author Summary</label>
+                    <textarea name="summary" cols="30" rows="10" class="form-control" ><%=author.summary%></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary btn-block">Update Author</button>
                 </form>
@@ -55,6 +59,7 @@
 <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
 <script>
   CKEDITOR.replace( 'describe' );
+  CKEDITOR.replace( 'summary' );
 </script>
 
 
